[gd_scene load_steps=19 format=3 uid="uid://4n1ukksjw2g"]

[ext_resource type="Script" path="res://scripts/ranged_enemy.gd" id="1_avep2"]
[ext_resource type="Texture2D" uid="uid://c1ohpgf3f5n4l" path="res://assets/bullet.png" id="2_ytu8n"]
[ext_resource type="Texture2D" uid="uid://db0dojofavdpp" path="res://assets/ice-wraith/wraith-spritesheet.png" id="3_d37xx"]
[ext_resource type="Shader" path="res://shaders/glow.gdshader" id="3_grnly"]
[ext_resource type="PackedScene" uid="uid://1pi3yxplylql" path="res://scenes/health_bar.tscn" id="5_p2m48"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_onkb5"]
shader = ExtResource("3_grnly")
shader_parameter/EXTRA_GLOW = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hkt5t"]
radius = 36.0
height = 122.51

[sub_resource type="Animation" id="Animation_f1ri8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangedEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_glc21"]
resource_name = "shoot_left"
length = 5.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangedEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [62, 61, 60, 59, 58, 57, 56, 55, 54, 71, 70, 69, 68, 67, 66, 65, 64, 63]
}

[sub_resource type="Animation" id="Animation_a2xjh"]
resource_name = "shoot_right"
length = 5.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangedEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_im00j"]
_data = {
"RESET": SubResource("Animation_f1ri8"),
"shoot_left": SubResource("Animation_glc21"),
"shoot_right": SubResource("Animation_a2xjh")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ylxja"]
animation = &"shoot_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mdewd"]
animation = &"shoot_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t7tqp"]
animation = &"shoot_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bcnxy"]
animation = &"shoot_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_erd46"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ylxja")
blend_point_0/pos = Vector2(-1, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_mdewd")
blend_point_1/pos = Vector2(-1, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_t7tqp")
blend_point_2/pos = Vector2(1, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_bcnxy")
blend_point_3/pos = Vector2(1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3u016"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_inv71"]
states/Shoot/node = SubResource("AnimationNodeBlendSpace2D_erd46")
states/Shoot/position = Vector2(493, 100)
transitions = ["Start", "Shoot", SubResource("AnimationNodeStateMachineTransition_3u016")]
graph_offset = Vector2(-30.4602, -23.5697)

[node name="RangedEnemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_avep2")

[node name="Shadow" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.145098, 0.145098, 0.145098, 1)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(0, 67)
scale = Vector2(0.777778, 0.554134)
texture = ExtResource("2_ytu8n")

[node name="RangedEnemySprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_onkb5")
scale = Vector2(1.19048, 1.19048)
texture = ExtResource("3_d37xx")
hframes = 9
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_hkt5t")

[node name="RangedEnemyAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_im00j")
}

[node name="RangedAnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%RangedAnimationTree/..")
tree_root = SubResource("AnimationNodeStateMachine_inv71")
anim_player = NodePath("../RangedEnemyAnimation")
parameters/Shoot/blend_position = Vector2(-0.252275, -0.159292)

[node name="WeaponPivot" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(55, 0)

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HealthBar" parent="." instance=ExtResource("5_p2m48")]
visible = false

[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
